# rust_database_system

./: .gitignore  ARCHITECTURE.ko.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  IMPROVEMENTS.ko.md  IMPROVEMENTS.md  LICENSE  README.ko.md  README.md  REVIEW.md
benches/: database_benchmarks.rs
examples/: basic_usage.rs  transactions.rs  value_types.rs
src/: lib.rs
src/backends/: mod.rs  pooled_sqlite.rs  postgres.rs  sqlite.rs
src/core/: database.rs  database_types.rs  error.rs  migration.rs  mod.rs  query_builder.rs  transaction.rs  value.rs
tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
